<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">RESTfulContacts</string>
    <string name="app_version">1.0RC7</string>

    <!-- Contacts -->
    <string name="contacts_add">New</string>

    <!-- Contact Details -->
    <string name="activity_details">Contact Details</string>
    <string name="detail_fname_label">First Name:</string>
    <string name="detail_fname_hint">first name</string>
    <string name="detail_lname_label">Last Name:</string>
    <string name="detail_lname_hint">last name</string>
    <string name="detail_phone_label">Phone:</string>
    <string name="detail_phone_hint">phone number</string>
    <string name="detail_email_label">eMail:</string>
    <string name="detail_email_hint">email address</string>
    <string name="detail_update">Submit</string>
    <string name="detail_delete">Delete</string>
    <string name="name_required">A contact must have at least a first name</string>

    <!-- Prefs -->
    <string name="activity_prefs">Settings</string>
    <string name="prefs_title">Settings</string>
    <string name="prefs_sync_title">Sync prefs</string>
    <string name="prefs_url_title">Sync URL</string>
    <string name="prefs_url_key">RESTfulContacts.URI</string>

    <!-- Provider -->
    <string name="contacts_authority">com.enterpriseandroid.restfulcontacts.CONTACTS</string>
</resources>